; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswscale/extr_yuv2rgb.c_roundToInt16.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswscale/extr_yuv2rgb.c_roundToInt16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @roundToInt16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @roundToInt16(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = add nsw i32 %5, 32768
  %7 = ashr i32 %6, 16
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, -32767
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 32768, i32* %2, align 4
  br label %17

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  %13 = icmp sgt i32 %12, 32767
  br i1 %13, label %14, label %15

14:                                               ; preds = %11
  store i32 32767, i32* %2, align 4
  br label %17

15:                                               ; preds = %11
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %14, %10
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
